# 42sh

./: .gitignore  .travis.yml  42sh_history  CMakeLists.txt  Makefile  Pipfile  README  README.md  TODO  autogen.sh  docker-compose.yml  doxy-config  history_tmp  pre-commit.sh  requirements.txt  test.c  test.sh
Dockerconfig/: Dockerfile
doc/: 42sh.1
doc-pak/: README.md  TODO
scripts/: coding_style.sh
scripts/gdb/: test_case_item  test_read_and_or  test_read_case_clause  test_read_do_group  test_read_input  test_read_list  test_read_pipeline  test_read_rule_until  test_read_simple_command
src/: .ast_print.c.swp  .ast_print.h.swp  42sh.c  42sh_history.c  42sh_history.h  ast_print.c  ast_print.h  errors.c  errors.h  options.c  options.h  test_ast_print.h
src/execution/: execute_ast.c  execute_ast.h  execute_command.c  execute_command.h
src/interactive/: .prompt.c.swp  prompt.c  prompt.h
src/lexer/: lexer.c  lexer.h
src/parser/: .parser.h.swp  ast.c  ast_accessor.c  ast_data.c  ast_init.c  parser.c  parser.h  parser_capture.c  parser_capture_init.c  parser_character.c  parser_init.c  parser_read_alphanum.c  parser_read_interval.c  parser_string_includes.c  variables.c  variables.h  variables_utils.c
src/utils/: assignment_word.c  assignment_word.h  exec.c  exec.h  function_utils.c  function_utils.h  option_util.c  option_util.h  string.c  string.h
tests/: coding_style_checker.py  coding_style_fixer.py  docker-compose.yml  test_suite (2).py  test_suite.py  test_unit.py  unit_test.py
tests/Basic tests/: basic_command.yml  directory_test.yml
tests/Category3_name_test/: timer_test.yml  valgrind_test.yml
tests/Dockerconfig/: Dockerfile
tests/Options_Parser/: no_arguments.yml  options_parser_version_print.yml  version_print.yml
tests/category1/: directory_test.yml  test_one.yml  test_two.yml
tests/category2/: test_one.yml  test_two.yml
tests/gdb/: exec  test_ast_print  test_comment  test_read_and_or  test_read_comment  test_read_do_group  test_read_list  test_read_pipeline  test_read_rule_case  test_read_shell_command
tests/integration/: for.yml  while.yml
tests/sh_test_files/: check_exec_if_42sh.sh  check_exec_if_bash.sh  check_if.sh  printer.py  var_interpret_quote.sh  var_memory_test.sh  var_modify_test.sh
tests/unit/: ast_print.c  (+6 more)
(+243 files in other folders)
